fix z-index

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a{
   align-items: center;
   width: 100%;
   padding: 15px 16px;
-  z-index: 10000;
+  z-index: 100;
 }
 
 .header__logo{
@@ -94,7 +94,7 @@ a{
   background-color: #fff;
 
   transition: right, .3s;
-  z-index: 100000;
+  z-index: 1000;
 }
 
 .menu_active{
@@ -177,7 +177,7 @@ a{
   display: flex;
   align-items: end;
   padding: 0 16px;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .ship-to__icon{
@@ -565,7 +565,7 @@ a{
   right: 0;
   padding-top: 100px;
   background-color: #fff;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .preloader_active{
